// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > can be danger 1`] = `
<DocumentFragment>
  <button
    class="mdc-button"
    style="--mdc-theme-primary: var(--mdc-theme-error); --mdc-theme-on-primary: var(--mdc-theme-on-error);"
  >
    <div
      class="mdc-button__ripple"
    />
    <div
      class="mdc-button__touch"
    />
    <div
      class="mdc-button__focus-ring"
    />
    <span
      class="mdc-button__label"
    />
  </button>
</DocumentFragment>
`;

exports[`Button > can have a trailing icon 1`] = `
<DocumentFragment>
  <button
    class="mdc-button"
  >
    <div
      class="mdc-button__ripple"
    />
    <div
      class="mdc-button__touch"
    />
    <div
      class="mdc-button__focus-ring"
    />
    <span
      class="mdc-button__label"
    >
      Button
    </span>
    <i
      class="rmwc-icon rmwc-icon--ligature material-icons mdc-button__icon"
    >
      favorite
    </i>
  </button>
</DocumentFragment>
`;

exports[`Button > can have an icon 1`] = `
<DocumentFragment>
  <button
    class="mdc-button"
  >
    <div
      class="mdc-button__ripple"
    />
    <div
      class="mdc-button__touch"
    />
    <div
      class="mdc-button__focus-ring"
    />
    <i
      class="rmwc-icon rmwc-icon--ligature material-icons mdc-button__icon"
    >
      favorite
    </i>
    <span
      class="mdc-button__label"
    >
      Button
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button > renders 1`] = `
<DocumentFragment>
  <button
    class="mdc-button"
  >
    <div
      class="mdc-button__ripple"
    />
    <div
      class="mdc-button__touch"
    />
    <div
      class="mdc-button__focus-ring"
    />
    <span
      class="mdc-button__label"
    >
      Button
    </span>
  </button>
</DocumentFragment>
`;
